# Data-Structures

./: .gitignore
.github/workflows/: ci.yml
Array/src/: AllSubArr.java  MinMaxInArr.java  ReversalAlgoForRotation.java  ReverseArray.java  cycallyRotateByOne.java  cycleDetectionInArr.java  interSectionArr.java  (+6 more)
backtracking/: all_subsequebces.py  all_subset.py
design-patterns/: singleton.py
maths/: count_factors_of_number.py  factorial_trailing_zeros.py
microservices/fastapi/monolith/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  test_monolith.py
microservices/fastapi/monolith/app/: database.py  main.py  models.py
microservices/fastapi/monolith/app/config/: README.md  __init__.py  settings.py
microservices/fastapi/monolith/app/db/: __init__.py  database.py
microservices/fastapi/monolith/app/models/: README.md  __init__.py  order.py  product.py  user.py
microservices/fastapi/monolith/app/routers/: orders.py  products.py  users.py
microservices/fastapi/monolith/app/services/: order_service.py  product_service.py  user_service.py
microservices/fastapi/monolith/app/utils/: app_logger.py
py_array/: sec_larget.py
py_linkedlist_DS/: amex_interview.py  creation.py  insertion_ll.py  interview.py  linkedlist.py  test.txt  utils.py
py_treeDS/: in_order_travalsal.py  tree_creation.py
recursion/: call_stack_demo.py  digit_count.py  digit_sum.py  head_recursion.py  power.py  roadmap.md  sum_n.py  sum_n_params.py  tail_recursion.py
sliding_window_concepts/: avg_subarray_size_k.py  max_sum_subarray.py  theory of sliding window.txt
(+58 files in other folders)
